shop feature added

--- a/app/templates/admin_dashboard.html
+++ b/app/templates/admin_dashboard.html
@@ -43,6 +43,15 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <div class="card-body text-center">
+                    <h5 class="card-title">Manage Shop</h5>
+                    <p class="card-text">Manage shop items.</p>
+                    <a href="{{ url_for('routes.manage_shop') }}" class="btn btn-primary my-2">Manage Shop Items</a>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
