--- a/app/templates/earlier_posts.html
+++ b/app/templates/earlier_posts.html
@@ -12,9 +12,11 @@
                         {% if post.image_filename %}
                             <img src="{{ url_for('static', filename='uploads/' + post.image_filename) }}" class="card-img-top" alt="Post Image">
                         {% endif %}
+
                         <div class="card-body">
                             <h5 class="card-title">{{ post.title }}</h5>
                             <p class="card-text">{{ post.body[:100] | safe}}...</p>
+                            <p>Posted by: {{ post.author }}</p>
                             <a href="{{ url_for('routes.post', post_id=post.id) }}" class="btn btn-primary bg-success">Read More</a>
                         </div>
                         <div class="card-footer text-muted">
