--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,5 @@
 <!-- my_flask_app/app/templates/base.html -->
-
-<!-- app/templates/base.html -->
+ 
 <!DOCTYPE html>
 <html lang="en">
 
@@ -35,6 +34,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('routes.earlier_posts') }}">Blog</a>
+                </li>
+                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('routes.shop') }}">Shop</a>
                 </li>
             </ul>
         </div>
