--- a/app/templates/edit_content.html
+++ b/app/templates/edit_content.html
@@ -33,10 +33,10 @@
             {{ form.image(class="form-control-file") }}
         </div>
 
-        <!-- div class="form-group">
+        <div class="form-group">
             {{ form.author.label }}
             {{ form.author(class="form-control") }}
-        </div -->
+        </div>
         
         <button type="submit" class="btn btn-primary">Save Changes</button>
     </form>
@@ -56,5 +56,4 @@
     </script>
 </div>
 {% endblock %}
-
 
