--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -1,26 +1,36 @@
 <!-- checkout.html -->
-{% extends 'base.html' %}
+
+{% extends "base.html" %}
+
+{% block title %}Checkout{% endblock %}
 
 {% block content %}
 <div class="container">
     <h1 class="text-center my-4">Checkout</h1>
-    <div class="row">
-        {% for item in cart_items %}
-        <div class="col-md-4">
-            <div class="card">
-                <img src="{{ url_for('static', filename='uploads/' + item.image_filename) }}" class="card-img-top" alt="{{ item.name }}">
-                <div class="card-body">
-                    <h5 class="card-title">{{ item.name }}</h5>
-                    <p class="card-text">{{ item.description }}</p>
-                    <p class="card-text">{{ item.price }} KES</p>
-                </div>
-            </div>
+    <form method="POST" action="{{ url_for('routes.process_checkout') }}">
+        {{ form.hidden_tag() }}
+        <div class="form-group">
+            {{ form.name.label(class="form-label") }}
+            {{ form.name(class="form-control") }}
+            {% for error in form.name.errors %}
+                <div class="text-danger">{{ error }}</div>
+            {% endfor %}
         </div>
-        {% endfor %}
-    </div>
-    <h3>Total: {{ total }} KES</h3>
-    <form method="POST" action="{{ url_for('routes.checkout') }}">
-        <button type="submit" class="btn btn-primary">Pay with Mpesa</button>
+        <div class="form-group">
+            {{ form.address.label(class="form-label") }}
+            {{ form.address(class="form-control") }}
+            {% for error in form.address.errors %}
+                <div class="text-danger">{{ error }}</div>
+            {% endfor %}
+        </div>
+        <div class="form-group">
+            {{ form.payment_method.label(class="form-label") }}
+            {{ form.payment_method(class="form-control") }}
+            {% for error in form.payment_method.errors %}
+                <div class="text-danger">{{ error }}</div>
+            {% endfor %}
+        </div>
+        <button type="submit" class="btn btn-primary">Place Order</button>
     </form>
 </div>
 {% endblock %}
