login changes made

--- a/app/templates/admin_login.html
+++ b/app/templates/admin_login.html
@@ -19,20 +19,23 @@
                 {% endif %}
             {% endwith %}
 
-
             <form method="POST" action="{{ url_for('routes.admin_login') }}">
+                {{ form.hidden_tag() }}
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" required>
+                    {{ form.username(class="form-control") }}
                 </div>
+
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" name="password" required>
+                    {{ form.password(class="form-control") }}
                 </div>
+                
                 <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="remember_me" name="remember_me">
+                    {{ form.remember_me(class="form-check-input") }}
                     <label class="form-check-label" for="remember_me">Remember Me</label>
                 </div>
+                
                 <button type="submit" class="btn btn-primary btn-block">Login</button>
             </form>
         </div>
