--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -1,36 +1,37 @@
-<!-- checkout.html -->
+<!-- my_flask_app/app/tmplates/checkout.html -->
 
 {% extends "base.html" %}
 
-{% block title %}Checkout{% endblock %}
-
 {% block content %}
 <div class="container">
-    <h1 class="text-center my-4">Checkout</h1>
-    <form method="POST" action="{{ url_for('routes.process_checkout') }}">
-        {{ form.hidden_tag() }}
-        <div class="form-group">
-            {{ form.name.label(class="form-label") }}
-            {{ form.name(class="form-control") }}
-            {% for error in form.name.errors %}
-                <div class="text-danger">{{ error }}</div>
+   <h2>Checkout</h2>
+    <table>
+        <thead>
+            <colgroup>
+                <col style="width: 50%;">
+                <col style="width: 20%;">
+                <col style="width: 30%;">
+            </colgroup>
+            <tr>
+                <th>Item</th>
+                <th>Quantity</th>
+                <th>Amount</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for item in cart_items %}
+                <tr>
+                    <td>{{ item['item']['name'] }}</td>
+                    <td>{{ item['quantity'] }}</td>
+                    <td>KES{{ item['item']['price'] * item['quantity'] }}</td>
+                </tr>
             {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.address.label(class="form-label") }}
-            {{ form.address(class="form-control") }}
-            {% for error in form.address.errors %}
-                <div class="text-danger">{{ error }}</div>
-            {% endfor %}
-        </div>
-        <div class="form-group">
-            {{ form.payment_method.label(class="form-label") }}
-            {{ form.payment_method(class="form-control") }}
-            {% for error in form.payment_method.errors %}
-                <div class="text-danger">{{ error }}</div>
-            {% endfor %}
-        </div>
-        <button type="submit" class="btn btn-primary">Place Order</button>
+        </tbody>
+    </table>
+    <p>Total Quantity: {{ total_quantity }}</p>
+    <p>Total Cost: KES{{ total_cost }}</p>
+    <form action="{{ url_for('routes.checkout') }}" method="post">
+        <button type="submit" class="btn btn-success">Confirm Purchase</button>
     </form>
 </div>
 {% endblock %}
