--- a/app/templates/admin/register.html
+++ b/app/templates/admin/register.html
@@ -30,10 +30,12 @@
         <div class="form-group">
             {{ form.password.label(class="form-label") }}
             {{ form.password(class="form-control", placeholder="Enter password") }}
+            <span class="field-icon" onclick="togglePassword()"><i class="fas fa-eye"></i></span>
         </div>
         <div class="form-group">
             {{ form.confirm_password.label(class="form-label") }}
             {{ form.confirm_password(class="form-control", placeholder="Confirm password") }}
+            <span class="field-icon" onclick="togglePassword()"><i class="fas fa-eye"></i></span>
         </div>
         <div class="form-group">
             {{ form.submit(class="btn btn-primary") }}
