--- a/app/templates/admin_login.html
+++ b/app/templates/admin_login.html
@@ -19,24 +19,24 @@
                 {% endif %}
             {% endwith %}
 
-            <form method="POST" action="{{ url_for('routes.admin_login') }}">
+             <!-- Admin Login Form -->
+            <form method="post" action="{{ url_for('routes.admin_login') }}" class="mt-4">
                 {{ form.hidden_tag() }}
                 <div class="form-group">
-                    <label for="username">Username</label>
-                    {{ form.username(class="form-control") }}
+                    {{ form.username.label(class="form-label") }}
+                    {{ form.username(class="form-control", id="username", autocomplete="username") }}
                 </div>
-
                 <div class="form-group">
-                    <label for="password">Password</label>
-                    {{ form.password(class="form-control") }}
+                    {{ form.password.label(class="form-label") }}
+                    {{ form.password(class="form-control", placeholder="Enter your password", id="password", autocomplete="current-password") }}
+                    <span class="field-icon" onclick="togglePassword()"><i class="fas fa-eye"></i></span> 
                 </div>
-                
-                <div class="form-group form-check">
-                    {{ form.remember_me(class="form-check-input") }}
-                    <label class="form-check-label" for="remember_me">Remember Me</label>
+                <div class="form-group">
+                    {{ form.remember_me() }} Remember Me
                 </div>
-                
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <div class="form-group">
+                    <input type="submit" value="Log In" class="btn btn-primary">
+                </div>
             </form>
         </div>
     </div>
