--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap" rel="stylesheet">    
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="..." crossorigin="anonymous" />
+    <script src="{{ url_for('static', filename='js/togglePassword.js') }}"></script>
 </head>
 <body class="d-flex flex-column min-vh-100">
     <div class="header">
