--- a/app/templates/login_shop.html
+++ b/app/templates/login_shop.html
@@ -17,7 +17,7 @@
         {% endif %}
     {% endwith %}
 
-    <form method="POST" action="{{ url_for('routes.login_shop', next=request.args.get('next')) }}">
+    <form method="post" action="{{ url_for('routes.login_shop', next=request.args.get('next')) }}">
         {{ form.hidden_tag() }}
         <div class="form-group">
             {{ form.username.label(class="form-label") }}
@@ -26,6 +26,7 @@
         <div class="form-group">
             {{ form.password.label(class="form-label") }}
             {{ form.password(class="form-control") }}
+            <span class="field-icon" onclick="togglePassword()"><i class="fas fa-eye"></i></span> 
         </div>
         <div class="form-group form-check">
             {{ form.remember_me(class="form-check-input") }}
@@ -36,7 +37,7 @@
         </div>
     </form>
     <div class="mt-3">
-        <p><a href="{{ url_for('routes.register') }}" class="btn btn-secondary">Register</a> Create account. </p>
+        <p><a href="{{ url_for('routes.register_shop') }}" class="btn btn-secondary">Register to Shop</a> Create account. </p>
     </div>
 </div>
 {% endblock %}
