--- a/app/templates/register_shop.html
+++ b/app/templates/register_shop.html
@@ -34,6 +34,7 @@
         <div class="form-group">
             {{ form.password.label(class="form-label") }}
             {{ form.password(class="form-control") }}
+            <span class="input-icon" onclick="togglePassword()"><i class="fas fa-eye"></i></span>
             {% for error in form.password.errors %}
             <div class="text-danger">{{ error }}</div>
             {% endfor %}
@@ -41,6 +42,7 @@
         <div class="form-group">
             {{ form.confirm_password.label(class="form-label") }}
             {{ form.confirm_password(class="form-control") }}
+            <span class="field-icon" onclick="togglePassword()"><i class="fas fa-eye"></i></span>
             {% for error in form.confirm_password.errors %}
             <div class="text-danger">{{ error }}</div>
             {% endfor %}
